--- a/public/static/config.json
+++ b/public/static/config.json
@@ -1,12 +1,12 @@
 {
     "core": [
         "Ánh - Tiến",
-        "Toàn - Ngọc",
+        "Duy Dương - Ngọc",
         "Xuân Hải - Tuấn Coca",
         "Đông - Dương Tiễn",
         "Đạt - Hiệp",
         "Trọng - Mạnh Hải",
-        "Cao - Duy Dương"
+        "Cao - Toàn"
     ],
     "out": [
         ""
